--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,7 @@
 {
   "version": 1,
   "cli": {
-    "defaultCollection": "@nrwl/angular"
+    "defaultCollection": "@schematics/angular"
   },
   "schematics": {
     "@nrwl/angular": {
@@ -13,6 +13,9 @@
       },
       "storybook-configuration": {
         "linter": "eslint"
+      },
+      "component": {
+        "style": "css"
       }
     },
     "@nrwl/angular:application": {
@@ -646,6 +649,269 @@
           "options": {
             "lintFilePatterns": [
               "apps/external-e2e/**/*.{js,ts}"
+            ]
+          }
+        }
+      }
+    },
+    "passenger-domain": {
+      "projectType": "library",
+      "root": "libs/passenger/domain",
+      "sourceRoot": "libs/passenger/domain/src",
+      "prefix": "passenger",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/angular:ng-packagr-lite",
+          "options": {
+            "project": "libs/passenger/domain/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "libs/passenger/domain/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "libs/passenger/domain/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": [
+            "coverage/libs/passenger/domain"
+          ],
+          "options": {
+            "jestConfig": "libs/passenger/domain/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/passenger/domain/src/**/*.ts",
+              "libs/passenger/domain/src/**/*.html"
+            ]
+          }
+        }
+      }
+    },
+    "passenger": {
+      "projectType": "application",
+      "root": "apps/passenger",
+      "sourceRoot": "apps/passenger/src",
+      "prefix": "flight-workspace",
+      "architect": {
+        "build": {
+          "builder": "ngx-build-plus:browser",
+          "options": {
+            "outputPath": "dist/apps/passenger",
+            "index": "apps/passenger/src/index.html",
+            "main": "apps/passenger/src/main.ts",
+            "polyfills": "apps/passenger/src/polyfills.ts",
+            "tsConfig": "apps/passenger/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "apps/passenger/src/favicon.ico",
+              "apps/passenger/src/assets"
+            ],
+            "styles": [
+              "apps/passenger/src/styles.scss",
+              "apps/flight-app/src/assets/css/bootstrap.min.css",
+              "apps/flight-app/src/assets/css/paper-dashboard.css",
+              "apps/flight-app/src/assets/css/demo.css",
+              "apps/flight-app/src/assets/css/themify-icons.css"
+            ],
+            "scripts": [],
+            "extraWebpackConfig": "apps/passenger/webpack.config.js",
+            "commonChunk": false
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "apps/passenger/src/environments/environment.ts",
+                  "with": "apps/passenger/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all",
+              "extraWebpackConfig": "apps/passenger/webpack.prod.config.js"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "ngx-build-plus:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "passenger:build:production",
+              "extraWebpackConfig": "apps/passenger/webpack.prod.config.js"
+            },
+            "development": {
+              "browserTarget": "passenger:build:development"
+            }
+          },
+          "defaultConfiguration": "development",
+          "options": {
+            "extraWebpackConfig": "apps/passenger/webpack.config.js",
+            "port": 3000
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "passenger:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "apps/passenger/src/**/*.ts",
+              "apps/passenger/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "ngx-build-plus:karma",
+          "outputs": [
+            "coverage/apps/passenger"
+          ],
+          "options": {
+            "jestConfig": "apps/passenger/jest.config.js",
+            "passWithNoTests": true,
+            "extraWebpackConfig": "apps/passenger/webpack.config.js"
+          }
+        }
+      }
+    },
+    "passenger-e2e": {
+      "root": "apps/passenger-e2e",
+      "sourceRoot": "apps/passenger-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/passenger-e2e/cypress.json",
+            "tsConfig": "apps/passenger-e2e/tsconfig.e2e.json",
+            "devServerTarget": "passenger:serve:development"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "passenger:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "apps/passenger-e2e/**/*.{js,ts}"
+            ]
+          }
+        }
+      }
+    },
+    "passenger-feature-search": {
+      "projectType": "library",
+      "root": "libs/passenger/feature-search",
+      "sourceRoot": "libs/passenger/feature-search/src",
+      "prefix": "passenger",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/angular:ng-packagr-lite",
+          "options": {
+            "project": "libs/passenger/feature-search/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "libs/passenger/feature-search/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "libs/passenger/feature-search/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": [
+            "coverage/libs/passenger/feature-search"
+          ],
+          "options": {
+            "jestConfig": "libs/passenger/feature-search/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/passenger/feature-search/src/**/*.ts",
+              "libs/passenger/feature-search/src/**/*.html"
+            ]
+          }
+        }
+      }
+    },
+    "passenger-feature-edit": {
+      "projectType": "library",
+      "root": "libs/passenger/feature-edit",
+      "sourceRoot": "libs/passenger/feature-edit/src",
+      "prefix": "passenger",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/angular:ng-packagr-lite",
+          "options": {
+            "project": "libs/passenger/feature-edit/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "libs/passenger/feature-edit/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "libs/passenger/feature-edit/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": [
+            "coverage/libs/passenger/feature-edit"
+          ],
+          "options": {
+            "jestConfig": "libs/passenger/feature-edit/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/passenger/feature-edit/src/**/*.ts",
+              "libs/passenger/feature-edit/src/**/*.html"
             ]
           }
         }
