--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,14 +15,17 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@flight-workspace/flight-lib": [
-        "libs/flight-lib/src/index.ts"
+      "@flight-workspace/flight-lib": ["libs/flight-lib/src/index.ts"],
+      "@flight-workspace/logger-lib": ["libs/logger-lib/src/index.ts"],
+      "@flight-workspace/dashboard-lib": ["libs/dashboard-lib/src/index.ts"],
+      "@flight-workspace/passenger/domain": [
+        "libs/passenger/domain/src/index.ts"
       ],
-      "@flight-workspace/logger-lib": [
-        "libs/logger-lib/src/index.ts"
+      "@flight-workspace/passenger/feature-search": [
+        "libs/passenger/feature-search/src/index.ts"
       ],
-      "@flight-workspace/dashboard-lib": [
-        "libs/dashboard-lib/src/index.ts"
+      "@flight-workspace/passenger/feature-edit": [
+        "libs/passenger/feature-edit/src/index.ts"
       ]
     }
   },
