--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@angular/platform-browser": "12.0.0",
     "@angular/platform-browser-dynamic": "12.0.0",
     "@angular/router": "12.0.0",
+    "@ngrx/component": "^12.0.0",
+    "@ngrx/component-store": "^12.0.0",
     "@ngrx/effects": "12.0.0",
     "@ngrx/entity": "12.0.0",
     "@ngrx/router-store": "12.0.0",
